# LinkedList

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  doxygen.cfg
include/: LinkedList.hpp  LinkedList.i.hpp  List.hpp  Node.hpp  Util.hpp
include/implementation/: LinkedList.i.hpp  List.i.hpp  Node.i.hpp  Util.i.hpp
src/: LinkedList.cpp  Main.cpp
test/: Test.cpp  test.cpp
